update write page

--- a/template/assets/css/base.css
+++ b/template/assets/css/base.css
@@ -15,6 +15,7 @@
     --green-color: #6cd8e6;
     --green-color-dark: #52A8A7;
     --green-color-light: #c1eaf0;
+    --verdurous-color: #23b26d;
     --green-background-color: #f2fbf6;
     --yellow-color: rgb(247,220,97);
     --yellow-color-dark: #f1c606;
