--- a/template/write_page.html
+++ b/template/write_page.html
@@ -775,7 +775,8 @@
                                 </span>
                             </div>
                             <div class="write__card-incorrect-content-item-content">
-                                <span class="write__card-incorrect-content-item-content-text write__card-incorrect-text-word">
+                                <span
+                                    class="write__card-incorrect-content-item-content-text write__card-incorrect-text-word">
                                     Door
                                 </span>
                                 <button class="write__card-incorrect-content-item-content-btn">
@@ -795,7 +796,8 @@
                                 </span>
                             </div>
                             <div class="write__card-incorrect-content-item-content">
-                                <span class="write__card-incorrect-content-item-content-text write__card-incorrect-text-wrong">
+                                <span
+                                    class="write__card-incorrect-content-item-content-text write__card-incorrect-text-wrong">
                                     Cái bàn
                                 </span>
                             </div>
@@ -812,7 +814,8 @@
                                 </span>
                             </div>
                             <div class="write__card-incorrect-content-item-content">
-                                <span class="write__card-incorrect-content-item-content-text  write__card-incorrect-text-correct">
+                                <span
+                                    class="write__card-incorrect-content-item-content-text  write__card-incorrect-text-correct">
                                     Cái cửa
                                 </span>
                             </div>
@@ -820,9 +823,96 @@
                     </div>
 
                     <div class="write__card-item-incorrect-footer">
-                        <button class="write__card-item-incorrect-continue-btn">
+                        <button class="write__card-item-incorrect-continue-btn"
+                            id="write__card-item-incorrect-continue-btn">
                             Tiếp tục
                         </button>
+                    </div>
+                </div>
+
+                <div class="write__card-item-result" id="write__card-item-result" style="display: none">
+                    <div class="write__card-result-header">
+                        <div class="write__card-result-header-title">
+                            <span class="write__card-result-header-title-text">
+                                Kết quả
+                            </span>
+                            <div class="write__card-result-header-title-scores">
+                                5/6 - 86%
+                            </div>
+                        </div>
+                        <button class="write__card-result-restart-btn" id="write__card-result-restart-btn">
+                            Bắt đầu lại
+                        </button>
+                    </div>
+                    <div class="write__card-item-result-content">
+                        <div class="write__card-result-content-lists">
+                            <!-- <div class="write__card-result-content-item write__card-result-content-item--correct">
+                                <div class="write__card-result-content-item-definition">
+                                    <div class="write__card-result-content-item-definition-icon">
+                                        <i class="fas fa-check"></i>
+                                    </div>
+                                    <span class="write__card-result-content-item-definition-text">
+                                       Nước
+                                    </span>
+                                </div>
+                                <div class="write__card-result-content-item-word">
+                                    <span class="write__card-result-content-item-word-text">
+                                        Water
+                                    </span>
+                                </div>
+                    
+                            </div>
+                            <div class="write__card-result-content-item write__card-result-content-item--incorrect">
+                                <div class="write__card-result-content-item-definition">
+                                    <div class="write__card-result-content-item-definition-icon">
+                                        <i class="fas fa-times"></i>
+                                    </div>
+                                    <span class="write__card-result-content-item-definition-text">
+                                      Xin chào
+                                    </span>
+                                </div>
+                                <div class="write__card-result-content-item-word">
+                                    <span class="write__card-result-content-item-word-text">
+                                        Hello
+                                    </span>
+                                </div>
+                    
+                            </div>
+                            <div class="write__card-result-content-item write__card-result-content-item--correct">
+                                <div class="write__card-result-content-item-definition">
+                                    <div class="write__card-result-content-item-definition-icon">
+                                        <i class="fas fa-check"></i>
+                                    </div>
+                                    <span class="write__card-result-content-item-definition-text">
+                                       Cái đèn
+                                    </span>
+                                </div>
+                                <div class="write__card-result-content-item-word">
+                                    <span class="write__card-result-content-item-word-text">
+                                       Lamp
+                                    </span>
+                                </div>
+                    
+
+                            </div>
+                            <div class="write__card-result-content-item write__card-result-content-item--correct">
+                                <div class="write__card-result-content-item-definition">
+                                    <div class="write__card-result-content-item-definition-icon">
+                                        <i class="fas fa-check"></i>
+                                    </div>
+                                    <span class="write__card-result-content-item-definition-text">
+                                       Cái thang
+                                    </span>
+                                </div>
+                                <div class="write__card-result-content-item-word">
+                                    <span class="write__card-result-content-item-word-text">
+                                       Stair
+                                    </span>
+                                </div>
+                    
+
+                            </div> -->
+                        </div>
                     </div>
                 </div>
             </div>
