--- a/template/assets/css/write_page.css
+++ b/template/assets/css/write_page.css
@@ -1,6 +1,4 @@
-
-
-.container__write{
+.container__write {
     padding: 0 28px;
     background-color: var(--gray-color);
     height: calc(100vh - 63px);
@@ -32,136 +30,134 @@
     justify-content: flex-start;
 }
 
-.control__back-link i{
+.control__back-link i {
     color: var(--green-color);
     margin-right: 12px;
 }
 
-.control__back-btn-text{
+.control__back-btn-text {
     font-size: 1.5rem;
     font-weight: 500;
     color: var(--text-color);
 }
-.control__back-link:hover i{
+
+.control__back-link:hover i {
     color: var(--yellow-color-dark)
 }
 
-.control__main{
+.control__main {
     padding: 16px;
     margin-top: 24px;
 }
 
-.control__main-title{
+.control__main-title {
     display: flex;
     align-items: center;
     margin-bottom: 40px;
 }
 
-.control__main-title> i{
+.control__main-title>i {
     font-size: 2rem;
     margin-right: 15px;
     color: var(--blue-color-dark)
 }
 
-.control__main-title-text{
+.control__main-title-text {
     font-size: 1.5rem;
     font-weight: 500;
 }
 
-.control__main-progress{
+.control__main-progress {}
 
-}
-
-.control__main-progress-item{
+.control__main-progress-item {
     margin-bottom: 20px;
 }
 
-.control__main-progress-bar{
+.control__main-progress-bar {
     height: 12px;
     width: 100%;
 }
 
-.control__main-progress-bar-fill{
+.control__main-progress-bar-fill {
     height: 12px;
 }
 
-.control__main-progress-text{
+.control__main-progress-text {
     display: flex;
-    justify-content:space-between;
+    justify-content: space-between;
     font-size: 1.3rem;
     margin-top: 3px;
 }
 
-.control__main-progress-text-title{
+.control__main-progress-text-title {}
+
+.control__main-progress-text-number {}
+
+.control__main-progress-bar--rest {
+    background-color: var(--blue-color-light);
 
 }
 
-.control__main-progress-text-number{
-
+.control__main-progress-bar--incorrect {
+    background-color: var(--pink-color-light);
 }
 
-.control__main-progress-bar--rest{
-background-color: var(--blue-color-light);
-
-}
-.control__main-progress-bar--incorrect{
-background-color: var(--pink-color-light);
-}
-.control__main-progress-bar--correct{
-background-color: var(--green-color-light);
+.control__main-progress-bar--correct {
+    background-color: var(--green-color-light);
 }
 
-.control__main-progress-bar-fill--rest{
+.control__main-progress-bar-fill--rest {
     width: 100%;
-    background-color:var(--blue-color-dark);
+    background-color: var(--blue-color-dark);
 }
-.control__main-progress-bar-fill--incorrect{
-    width: 0;
-    background-color:var(--red-color-light)
-}
-.control__main-progress-bar-fill--correct{
-    width: 0;
-    background-color:var(--green-color-dark);
-    
-}   
 
-.control__main-action{
+.control__main-progress-bar-fill--incorrect {
+    width: 0;
+    background-color: var(--red-color-light)
+}
+
+.control__main-progress-bar-fill--correct {
+    width: 0;
+    background-color: var(--green-color-dark);
+
+}
+
+.control__main-action {
     position: absolute;
     bottom: 16px;
     width: 100%;
     padding: 0 32px 0 0;
 }
 
-.control__main-action-btn{
+.control__main-action-btn {
     height: 46px;
     padding: 12px 24px;
     width: 100%;
-    border: 2px solid var( --border-gray-color);
+    border: 2px solid var(--border-gray-color);
     border-radius: 3px;
     background-color: var(--white-color);
     color: var(--green-color);
     font-weight: 600;
     font-size: 1.5rem;
 }
-.control__main-action-btn:hover{
+
+.control__main-action-btn:hover {
     color: var(--yellow-color-dark)
 }
 
 
 
 
-.layout__content{
+.layout__content {
     padding: 24px;
     position: relative;
     width: calc(100% - 195px);
     left: 195px;
 }
 
-.write__card-items{
+.write__card-items {}
 
-}
-
-.write__card-item{
+.write__card-item {
     width: 100%;
     background-color: var(--white-color);
     padding: 40px;
@@ -169,96 +165,98 @@ background-color: var(--green-color-light);
 }
 
 
-.write__card-item-title{
+.write__card-item-title {
     margin-bottom: 40px;
 }
-.write__card-item-title-text{
+
+.write__card-item-title-text {
     font-size: 3rem;
     font-weight: 600;
     color: var(--red-color-light);
 }
 
-.write__card-item-question{
+.write__card-item-question {
     display: flex;
     justify-content: space-between;
 }
- 
-.write__card-item-question-body{
+
+.write__card-item-question-body {
     width: 100%;
 }
-.write__card-item-question-word{
 
-}
-.write__card-item-question-title{
+.write__card-item-question-word {}
+
+.write__card-item-question-title {
     margin-bottom: 15px;
 }
 
-.write__card-item-question-title-text{
+.write__card-item-question-title-text {
     font-size: 1.3rem;
     font-weight: 500;
     color: var(--text-gray-color);
 }
 
-.write__card-item-question-content{
+.write__card-item-question-content {
     display: flex;
     justify-content: space-between;
     width: 100%;
-    
+
 }
-.write__card-item-question-content-text{
+
+.write__card-item-question-content-text {
     font-size: 2rem;
     display: block;
 }
 
 
-.write__card-item-question-content-btn{
+.write__card-item-question-content-btn {
     font-size: 1.7rem;
     font-weight: 600;
     border: none;
     background-color: transparent;
 }
 
-.write__card-item-question-content-btn:hover{
+.write__card-item-question-content-btn:hover {
     color: var(--yellow-color-dark)
 }
 
 
 
-.write__card-item-unknown-btn{
+.write__card-item-unknown-btn {
     border: none;
     color: var(--green-color);
     font-weight: 600;
     font-size: 1.5rem;
     width: 110px;
-    background-color:  transparent;
+    background-color: transparent;
 
 }
 
-.write__card-item-unknown-btn.write__card-item-unknown-btn:hover{
+.write__card-item-unknown-btn.write__card-item-unknown-btn:hover {
     color: var(--yellow-color-dark);
 }
 
-.write__card-item-separator{
+.write__card-item-separator {
     height: 1px;
     width: 100%;
     background-color: var(--border-gray-color);
     margin: 38px 0;
     opacity: 0.5;
-}  
+}
 
-.write__card-item-answer{
+.write__card-item-answer {
     display: flex;
     justify-content: space-between;
     margin-top: 36px;
 }
 
-.write__card-item-answer-input-field{
+.write__card-item-answer-input-field {
     width: 100%;
 }
 
-.write__card-item-answer-input{
-    width:100%;
-    height:42px;
+.write__card-item-answer-input {
+    width: 100%;
+    height: 42px;
     border: none;
     border-bottom: 2px solid var(--text-color);
     outline: none;
@@ -266,16 +264,17 @@ background-color: var(--green-color-light);
     margin-bottom: 8px;
 }
 
-.write__card-item-answer-input:focus{
+.write__card-item-answer-input:focus {
     border-bottom: 4px solid var(--yellow-color-dark);
 }
 
-.write__card-item-answer-label{
+.write__card-item-answer-label {
     font-size: 1.3rem;
     font-weight: 450;
     color: var(--text-gray-color)
 }
-.write__card-item-answer-btn{
+
+.write__card-item-answer-btn {
     margin-left: 30px;
     height: 48px;
     width: 120px;
@@ -288,7 +287,7 @@ background-color: var(--green-color-light);
     background-color: var(--green-color);
 }
 
-.write__card-item-answer-btn:hover{
+.write__card-item-answer-btn:hover {
     background-color: var(--green-color-dark);
 }
 
@@ -365,7 +364,7 @@ background-color: var(--green-color-light);
 
 .modal__body-content-item-btn {
     border: none;
-    background-color:transparent;
+    background-color: transparent;
     color: var(--green-color-dark);
     font-size: 1.5rem;
     font-weight: 500;
@@ -378,10 +377,10 @@ background-color: var(--green-color-light);
 
 .modal__body-content-item-btn--active {
     color: var(--text-color);
-    background-color:var(--yellow-color-dark);
+    background-color: var(--yellow-color-dark);
 }
 
-.modal__body-content-row-separator{
+.modal__body-content-row-separator {
     height: 1px;
     /* width: 100%; */
     background-color: var(--border-gray-color);
@@ -390,15 +389,15 @@ background-color: var(--green-color-light);
 
 
 
-.write__card-item-incorrect{
+.write__card-item-incorrect {
     background-color: var(--white-color);
 }
 
-.write__card-item-incorrect-title{
+.write__card-item-incorrect-title {
     padding: 24px 32px 0 32px;
 }
 
-.write__card-item-incorrect-title-text{
+.write__card-item-incorrect-title-text {
     font-size: 3rem;
     display: flex;
     height: 38px;
@@ -407,7 +406,7 @@ background-color: var(--green-color-light);
     color: var(--red-color-light);
 }
 
-.write__card-item-incorrect-separator{
+.write__card-item-incorrect-separator {
     height: 1px;
     width: 100%;
     background-color: var(--border-gray-color);
@@ -415,46 +414,51 @@ background-color: var(--green-color-light);
     margin: 32px 0 24px 0;
 }
 
-.write__card-item-incorrect-content{
+.write__card-item-incorrect-content {
     padding: 0 32px 32px 32px;
 }
 
-.write__card-incorrect-content-item{
+.write__card-incorrect-content-item {}
 
-}
+.write__card-incorrect-content-item-title {}
 
-.write__card-incorrect-content-item-title{
-
-}
-
-.write__card-incorrect-content-item-title-text{
+.write__card-incorrect-content-item-title-text {
     font-size: 1.3rem;
     font-weight: 500;
     color: var(--text-gray-color);
 }
 
-.write__card-incorrect-content-item-content{
+.write__card-incorrect-content-item-content {
     display: flex;
     justify-content: space-between;
     margin-top: 12px;
 }
 
-.write__card-incorrect-content-item-content-text{
+.write__card-incorrect-content-item-content-text {
     font-size: 1.6rem;
 }
 
-.write__card-incorrect-content-item-content-btn{
+.write__card-incorrect-text-wrong {
+    color: var(--red-color-light);
+}
+
+.write__card-incorrect-text-correct {
+    color: var(--green-color);
+}
+
+.write__card-incorrect-content-item-content-btn {
     border: none;
-    background-color:transparent;
+    background-color: transparent;
     font-size: 1.5rem;
 }
 
-.write__card-item-incorrect-footer{
+.write__card-item-incorrect-footer {
     width: 100%;
     padding: 16px;
     text-align: center;
 }
-.write__card-item-incorrect-continue-btn{
+
+.write__card-item-incorrect-continue-btn {
     height: 42px;
     width: 120px;
     font-size: 1.5rem;
@@ -465,6 +469,77 @@ background-color: var(--green-color-light);
     color: var(--white-color);
 }
 
-.write__card-item-incorrect-continue-btn:hover{
+.write__card-item-incorrect-continue-btn:hover {
     background-color: var(--green-color-dark);
+}
+
+
+
+.write__card-item-result {
+    background-color: var(--white-color);
+    padding: 40px;
+}
+
+.write__card-result-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 66px;
+    margin-bottom: 12px;
+}
+
+.write__card-result-header-title {}
+
+.write__card-result-header-title-text {
+    font-size: 3rem;
+    font-weight: 600;
+    color: var(--text-color);
+}
+
+.write__card-result-header-title-scores{
+    font-size: 2rem;
+    font-weight: 600;
+    color: var(--text-gray-color);
+    margin-top: 10px;
+}
+
+.write__card-result-restart-btn {
+    height: 42px;
+    font-size: 1.5rem;
+    font-weight: 500;
+    color: var(--white-color);
+    background-color: var(--green-color);
+    border: none;
+    border-radius: 3px;
+    padding: 0 20px;
+}
+.write__card-result-restart-btn:hover{
+    background-color: var(--green-color-dark);
+}
+
+
+.write__card-result-content-item{
+    display: flex;
+    align-items: center;
+    padding: 24px 10px;
+    border-bottom: 1px solid var(--border-gray-color);
+    font-size: 1.5rem;
+}
+.write__card-result-content-item-definition{
+    display: flex;
+    width: 50%;
+}
+.write__card-result-content-item-definition-icon{
+    margin-right: 20px;
+}
+.write__card-result-content-item-definition-text{
+    font-size: 1.6rem;
+}
+
+.write__card-result-content-item--correct .write__card-result-content-item-definition{
+    color: var(--verdurous-color);
+}
+
+.write__card-result-content-item--incorrect .write__card-result-content-item-definition{
+    color: var(--red-color-light)
 }
