--- a/template/study_page.html
+++ b/template/study_page.html
@@ -27,12 +27,12 @@
             <div class="study__header-menu">
                 <div class="study__header-menu-logo">
                     <i class="bi bi-info-circle"></i>
-                    <button class="study__header-menu-btn">
+                    <button class="study__header-menu-btn" id="study__header-menu-btn">
                         Học
                         <i class="fas fa-angle-down"></i>
                     </button>
                 </div>
-                <ul class="study__header-list-items" id="study__header-list-items" style="display: none">
+                <ul class="study__header-list-items" id="study__header-list-items">
                     <li class="study__header-list-item">
                         <a class="study__header-list-item-link" href="#">
                             <i class="bi bi-back"></i>
