--- a/template/write_page.html
+++ b/template/write_page.html
@@ -415,7 +415,7 @@
     <div class="container__write">
         <div class="layout__control">
             <div class="control__back">
-                <a href="#" class="control__back-link">
+                <a href="term_details.html" class="control__back-link">
                     <i class="fas fa-chevron-left"></i>
                     <span class="control__back-btn-text">Trở về</span>
                 </a>
@@ -551,8 +551,8 @@
                     </div>
                     <div class="write__card-item-answer">
                         <div class="write__card-item-answer-input-field">
-                            <input type="text" spellcheck="false" class="write__card-item-answer-input">
-                            <label class="write__card-item-answer-label">NHẬP TIẾNG VIỆT</label>
+                            <input type="text" spellcheck="false" autocomplete="off"value=" "  class="write__card-item-answer-input">
+                            <span class="write__card-item-answer-label">NHẬP TIẾNG VIỆT</span>
                         </div>
                         <button class="write__card-item-answer-btn">
                             Đáp án
@@ -616,8 +616,8 @@
                     </div>
                     <div class="write__card-item-answer">
                         <div class="write__card-item-answer-input-field">
-                            <input type="text" spellcheck="false" class="write__card-item-answer-input">
-                            <label for="" class="write__card-item-answer-label">NHẬP TIẾNG VIỆT</label>
+                            <input type="text" spellcheck="false" autocomplete="off"value=" " class="write__card-item-answer-input">
+                            <span class="write__card-item-answer-label">NHẬP TIẾNG VIỆT</span>
                         </div>
                         <button class="write__card-item-answer-btn">
                             Đáp án
@@ -682,8 +682,8 @@
                     </div>
                     <div class="write__card-item-answer">
                         <div class="write__card-item-answer-input-field">
-                            <input type="text" spellcheck="false" class="write__card-item-answer-input">
-                            <label for="" class="write__card-item-answer-label">NHẬP TIẾNG VIỆT</label>
+                            <input type="text" spellcheck="false" autocomplete="off"value=" " class="write__card-item-answer-input">
+                            <span class="write__card-item-answer-label">NHẬP TIẾNG VIỆT</span>
                         </div>
                         <button class="write__card-item-answer-btn">
                             Đáp án
@@ -747,8 +747,8 @@
                     </div>
                     <div class="write__card-item-answer">
                         <div class="write__card-item-answer-input-field">
-                            <input type="text" spellcheck="false" class="write__card-item-answer-input">
-                            <label for="" class="write__card-item-answer-label">NHẬP TIẾNG VIỆT</label>
+                            <input type="text" spellcheck="false" autocomplete="off"value=" " class="write__card-item-answer-input">
+                            <span class="write__card-item-answer-label">NHẬP TIẾNG VIỆT</span>
                         </div>
                         <button class="write__card-item-answer-btn">
                             Đáp án
