update write page

--- a/template/write_page.html
+++ b/template/write_page.html
@@ -495,7 +495,7 @@
 
         <div class="layout__content">
             <div class="write__card-items">
-                <div class="write__card-item">
+                <div class="write__card-item write__card-item--star">
                     <div class="write__card-item-title" style="display: none">
                         <span class="write__card-item-title-text">
                             Chép lại đáp án
@@ -510,8 +510,7 @@
                                     </span>
                                 </div>
                                 <div class="write__card-item-question-content">
-                                    <span
-                                        class="write__card-item-question-content-text write__card-item-question-word-text">
+                                    <span class="write__card-item-question-content-text write__card-item-question-word-text">
                                         Goodbye
                                     </span>
                                     <button class="write__card-item-question-content-btn" style="display: none">
@@ -532,8 +531,7 @@
                                     </span>
                                 </div>
                                 <div class="write__card-item-question-content">
-                                    <span
-                                        class="write__card-item-question-content-text write__card-item-question-definition-text">
+                                    <span class="write__card-item-question-content-text write__card-item-question-definition-text">
                                         Tạm biệt
                                     </span>
                                 </div>
@@ -624,7 +622,7 @@
                         </button>
                     </div>
                 </div>
-                <div class="write__card-item">
+                <div class="write__card-item write__card-item--star">
                     <div class="write__card-item-title" style="display: none">
                         <span class="write__card-item-title-text">
                             Chép lại đáp án
