--- a/template/check.html
+++ b/template/check.html
@@ -10,10 +10,10 @@
    <title>Kiểm tra</title>
   </head>
   <body
-    class="test index test mode none-selected all-terms has-no-footer has-sticky-header qad-is-showing theme-default"
+    class="theme-default"
   >
     <div
-      class="banner_ad blogads dfp_targeting ads ad adsbox doubleclick ad-placement carbon-ads __isAdBlockerEnabled"
+      class="carbon-ads __isAdBlockerEnabled"
       style="
         position: absolute;
         width: 10px;
@@ -992,9 +992,9 @@ content {
   border-radius: 50px;
 }
 .output {
-  width: 53%;
+  width: 48%;
   padding: 30px 0;
-  margin-left: 340px;
+  margin-left: 426px;
   margin-bottom: 28px;
   background: white;
   border-radius: 40px;
