--- a/template/assets/css/base.css
+++ b/template/assets/css/base.css
@@ -38,6 +38,15 @@ html{
     box-sizing: border-box;
 }
 
+body{
+    margin: 0;
+    padding: 0;
+}
+
+.m-0{
+    margin: 0;
+}
+
  
 
 .modal{
@@ -97,6 +106,6 @@ html{
 }
 
 
-button:hover{
+button:not(:disabled):hover{
     cursor: pointer;
 }
